test/e2e/fail_compile/type_errors/whole_term_runtime_block_stmt.cst
fn value() -> num {
    runtime { 1 };
    1
}

fn main() -> num {
    value()
}
